# inclusion-bench

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_gpt5.py
configs/: models.yaml
examples/: en_targets.txt  en_vocab_sample.txt
vocab_story_bench/: __main__.py  aggregate.py  beautiful_cli.py  cli.py  data_fetch.py  discovery.py  model_spec.py  parallel_runner.py  prompt.py  reports.py  runner.py  structured_prompt.py  unified_provider.py  validator.py  visualizations.py  visualize.py
vocab_story_bench/providers/: __init__.py  anthropic_provider.py  openai_provider.py  openrouter_provider.py  structured_anthropic.py  structured_openai.py
