[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inclusion-bench"
version = "0.1.0"
description = "Vocab-only story benchmark with parallel runs and dashboards"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Inclusion Bench", email = "devnull@example.com"}]
dependencies = [
    "httpx>=0.27.0",
    "PyYAML>=6.0.1",
    "pandas>=2.1.0",
    "python-dotenv>=1.0.1",
    "plotly>=5.22.0",
    "rich>=13.7.1",
    "requests>=2.31.0",
]

[project.scripts]
vocab-bench = "vocab_story_bench.cli:main"


